Crash inside FrameLoader::defaultRequestCachingPolicy (null DocumentLoader) <rdar://problem/42167093> and https://bugs.webkit.org/show_bug.cgi?id=215527

Reviewed by Darin Adler.

We have CrashTracer data, but despite my best efforts no way of reproducing.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::defaultRequestCachingPolicy): If a PingLoader is sending a CSP violation
  report sometime after part of the Document's lifecycle, the FrameLoader as a null DocumentLoader here.
  Like everywhere else in FrameLoader, null check it.


Canonical link: https://commits.webkit.org/228301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265723 268f45cc-cd09-0410-ab3c-d52691b4dbfc